# download4me

./: .gitignore  Cargo.toml  README.md  codebook.toml
migrations/: 20260702050926_init.up.sql  20260711073152_add_proxy_flag.down.sql  20260711073152_add_proxy_flag.up.sql  20260713092731_enable_flag.up.sql
src/: download.rs  main.rs  pages.rs  rules.rs  sites.rs  state.rs
src/downloader/: mod.rs  save_as_file.rs  simple_item.rs
