[package]
name = "download4me"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros"]}
anyhow = "1.0.103"
thiserror = "2.0"
sqlx = {
    version = "0.9.0",
    default-features = false,
    features = ["runtime-tokio", "sqlite", "macros", "migrate", "derive", "chrono"]
}
chrono = "0.4.42"
reqwest = {version = "0.13.4", features = ["socks", "cookies", "native-tls"]}
futures = "0.3.32"
regex = "1.12.4"

tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["json", "env-filter"]}


[dev-dependencies]
tempfile = "3.27.0"
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
